# vk_quote_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  logger.py  main.py
app/bot/: author_resolver.py  callbacks.py  forward_parser.py  keyboards.py  messages.py  peer.py  quote_service.py  state.py  style_service.py  user_manager.py  vk_client.py
app/domain/: models.py
app/render/: avatar_utils.py  font_utils.py  single_renderer.py  text_utils.py  theme_loader.py  thread_renderer.py
app/render/themes/: styles.json  thread_style.json
